Fix long menu overlap

--- a/assets/base.css
+++ b/assets/base.css
@@ -2124,6 +2124,7 @@ details[open] > .header__icon--menu .icon-hamburger {
   opacity: 1;
   transform: translateY(0);
   animation: animateMenuOpen var(--duration-default) ease;
+  z-index: 1;
 }
 
 /* Header menu */
